styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

:root {
  /* colors */
  --link-color: #035fe6;
  --link-hover-color: #136ff6;
  --background-color: #fff;
  --overlay-background-color: #eee;
  --highlight-background-color: #ccc;
  --overview-background-color: #eeeffc;
  --text-color: #000;
  --primary-button-background-color: #000;
  --primary-button-text-color: #fff;
  --accent-color: #881fff;
  --panel-background-color: #fafafa;


  /* fonts */
  --body-font-family: spezia, spezia_semimono, ubuntu, roboto, noto, sans-serif;
  --heading-font-family: var(--body-font-family);
  --fixed-font-family: "Spezia_SemiMono", menlo, consolas, 'Liberation Mono', monospace;
  --icon-font-family: "VltIcons"!important;

  /* font icon aliases */
  --vlt-right-arrow: "\e90c";
  --vlt-play-icon: "\e900";
  --vlt-gear-inverse-icon: "\e90a";
  --vlt-youtube-in-circle-icon: "\e90b";
  --vlt-right-arrow-2-icon: "\e90c";
  --vlt-down-chevron-icon: "\e90d";
  --vlt-close-icon: "\e90e";
  --vlt-circle-icon: "\e90f";
  --vlt-play-in-circle: "\e901";
  --vlt-close-in-circle: "\e902";
  --vlt-facebook-logo: "\e903";
  --vlt-twitter-logo: "\e904";
  --vlt-linkedin-logo: "\e905";
  --vlt-youtube-logo: "\e906";
  --vlt-vonage-big-logo: "\e907";
  --vlt-cloud-icon: "\e908";
  --vlt-headset-icon: "\e909";
  --vlt-circuit-icon: "\e910";
  --vlt-hamburger-icon: "\e911";
  --vlt-small-play-icon: "\e912";
  --vlt-small-play-button-in-circle: "\e913";
  --vlt-small-pause-button-in-circle: "\e914";
  --vlt-down-arrow-icon: "\e915";
  --vlt-checkmark-icon: "\e916";
  --vlt-warning-icon: "\e918";
  --vlt-mail-icon: "\e919";
  --vlt-dialog-bubble-icon: "\e91a";
  --vlt-search-icon: "\e91b";
  --vlt-world-2-icon: "\e91c";
  --vlt-up-right-arrow-icon: "\e91d";
  --vlt-facebook-in-circle-icon: "\e91e";
  --vlt-linkedin-in-circle-icon: "\e91f";
  --vlt-twitter-logo-inverse: "\e920";
  --vlt-phone-icon: "\e921";
  --vlt-left-arrow-icon: "\e922";
  --vlt-share-icon: "\e923";
  --vlt-star-icon: "\e924";
  --vlt-star-outline-icon: "\e925";
  --vlt-question-in-circle-icon: "\e926";
  --vlt-shopping-cart-icon: "\e927";
  --vlt-calendar-icon: "\e928";
  --vlt-upload-icon: "\e929";
  --vlt-instagram-logo: "\e92a";
  --vlt-power-icon: "\e92b";
  --vlt-deskphone-icon: "\e92c";
  --vlt-puzzle-piece-icon: "\e92d";
  --vlt-chip-icon: "\e92e";
  --vlt-lightbulb-icon: "\e92f";
  --vlt-shopping-cart-inverse-icon: "\e930";
  --vlt-key-icon: "\e931";
  --vlt-cloud-inverse-icon: "\e932";
  --vlt-code-icon: "\e933";
  --vlt-gear-icon: "\e934";
  --vlt-people-icon: "\e935";
  --vlt-head-phone-icon: "\e936";
  --vlt-laptop-icon: "\e937";
  --vlt-mail-2-icon: "\e938";
  --vlt-phone-2-icon: "\e939";
  --vlt-mobile-text-bubble-icon: "\e93a";
  --vlt-person-icon: "\e93b";
  --vlt-close-2-icon: "\e93c";
  --vlt-check-in-circle-icon: "\e93d";
  --vlt-layers-icon: "\e93e";
  --vlt-voicemail-icon: "\e93f";
  --vlt-people-2-icon: "\e940";
  --vlt-world-icon: "\e941";
  --vlt-money-per-line-icon: "\e942";
  --vlt-forward-icon: "\e943";
  --vlt-download-icon: "\e945";



  /* body sizes */
  --body-font-size-xxl: 34px;
  --body-font-size-xl: 30px;
  --body-font-size-l: 26px;
  --body-font-size-m: 20px;
  --body-font-size-s: 16px;
  --body-font-size-xs: 14px;
  --body-font-size-xxs: 12px;
  --body-font-size-xxxs: 10px;

  /* heading sizes */
  --heading-font-size-xxl: 48px;
  --heading-font-size-xl: 40px;
  --heading-font-size-l: 32px;
  --heading-font-size-m: 24px;
  --heading-font-size-s: 20px;
  --heading-font-size-xs: 18px;
  --heading-font-size-xxs: 16px;

  /* button sizes */
  --button-font-size-m: 16px;

  /* nav height */
  --nav-height: 12.5rem;
  --mobile-nav-height: 11.1rem;
  --bread-crumb-height: 6.3rem;
  --mobile-bread-crumb-height: 5.2rem;
}

@media (min-width: 900px) {
  :root {
    --body-font-size-xxl: 38px;
    --body-font-size-xl: 34px;
    --body-font-size-l: 30px;
    --body-font-size-m: 22px;
    --body-font-size-s: 18px;
    --body-font-size-xs: 16px;
    --body-font-size-xxs: 14px;
    --body-font-size-xxxs: 12px;
    --heading-font-size-xxl: 60px;
    --heading-font-size-xl: 48px;
    --heading-font-size-l: 36px;
    --heading-font-size-m: 30px;
    --heading-font-size-s: 24px;
    --heading-font-size-xs: 22px;
    --heading-font-size-xxs: 18px;
  }
}

/* global layout */
html {
  font-size: 62.5%;
}

body {
  font-size: var(--body-font-size-m);
  margin: 0;
  font-family: var(--body-font-family);
  line-height: 1.6;
  color: var(--text-color);
  display: none;
}

.magnolia-white {
  background-color: #eeeffc;
}

.white-gradient-down {
  background: linear-gradient(180deg, rgb(255 255 255 / 100%) 0%, rgb(238 239 252 / 100%) 85%);
}

.white-gradient-up {
  background: linear-gradient(360deg, rgb(255 255 255 / 100%) 0%, rgb(238 239 252 / 100%) 85%);
}

body.appear {
  display: unset;
}

header {
  position: fixed;
  height: var(--mobile-nav-height);
}

/* Offset main site content by the height of the header */
main {
  margin-top: var(--mobile-nav-height);
}

h1, h2, h3,
h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1em;
  margin-bottom: .5em;
  scroll-margin: calc(var(--nav-height) + 1em);
}

h1 { font-size: var(--heading-font-size-xxl); }
h2 { font-size: var(--heading-font-size-xl); }
h3 { font-size: var(--heading-font-size-l); }
h4 { font-size: var(--heading-font-size-m); }
h5 { font-size: var(--heading-font-size-s); }
h6 { font-size: var(--heading-font-size-xs); }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  padding: .125em;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-color);
}

/* buttons */
a.button:any-link, button {
  font-family: var(--body-font-family);
  display: inline-block;
  box-sizing: border-box;
  text-decoration: none;
  border: 2px solid transparent;
  text-align: center;
  font-style: normal;
  font-weight: 500;
  font-size: 1.6rem;
  cursor: pointer;
  color: var(--background-color);
  background-color: #000;
  margin: 16px 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 1rem;
  padding-left: 2.5rem;
  padding-right: 2.5rem;
  line-height: 70px;
  height: 7rem;
}

a.button:hover, a.button:focus, button:hover, button:focus {
  background-color: var(--link-hover-color);
  cursor: pointer;
}

button:disabled, button:disabled:hover {
  background-color: var(--overlay-background-color);
  cursor: unset;
}

a.button.primary, button.primary {
  background-color: var(--primary-button-background-color);
  color: var(--primary-button-text-color);
  font-size: var(--button-font-size-m);
  line-height: 7rem;
  border-radius: 1rem;
  border: 2px solid currentcolor;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  height: 7rem;
}

a.button.secondary, button.secondary {
  background-color: unset;
  color: var(--text-color);
  font-size: var(--button-font-size-m);
  line-height: 7rem;
  border-radius: 1rem;
  border: 2px solid currentcolor;
  transition: transform .2s;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  height: 7rem;
}

main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}

.icon svg {
  height: 100%;
  width: 100%;
}

.icon-search {
  height: 3rem;
  width: 3rem;
  vertical-align: middle;
}

[class*=" vlt-icon-"], [class^="vlt-icon-"] {
  font-family: var(--icon-font-family);
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  line-height: inherit;
  speak: none;
  text-transform: none;
}

main .section {
  padding: 0 16px 64px;
}

@media (min-width: 600px) {
  main .section {
    padding: 0 3.2rem 9.6rem;
  }
}

@media (min-width: 900px) {
  .section > div {
    max-width: 990pt;
    margin: auto;
  }
}

@media (min-width: 992px) {
  /* Offset main site content by the height of the nav plus the breadcrumb */
  main {
    margin-top: calc(var(--nav-height) + var(--bread-crumb-height));
  }
}

/* section metadata */
main .section.highlight {
  background-color: var(--highlight-background-color);
}

